[package]
name = "uavcan-llr"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc-any = { version = "2.3", default-features = false }
vhrdcan = { git = "https://github.com/vhrdtech/vhrdcan.git", optional = true }
