[package]
name = "uavcan-llr"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.5"
hash32 = "0.2.1"
hash32-derive = "0.1.1"
crc-any = { version = "2.3", default-features = false }
vhrdcan = { git = "https://github.com/vhrdtech/vhrdcan.git", optional = true }

#[patch."https://github.com/vhrdtech/vhrdcan.git"]
#vhrdcan = { path = "../vhrdcan" }
